--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,1 +1,39 @@
+.footer {
+  background-color: rgb(255, 255, 255);
 
+  width: 1200px;
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-inline: 40px;
+  border: 1px solid black;
+  border-radius: 24px;
+}
+.footer__img {
+  width: 30px;
+  height: 30px;
+  border-radius: 24px;
+}
+.footer__logo {
+  border-radius: 12px;
+  padding: 10px;
+  font-size: 2rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+}
+.footer__links > a {
+  text-decoration: none;
+  padding: 10px;
+  color: #000;
+  font-weight: 500;
+  margin-left: 20px;
+  font-size: 1.4rem;
+  justify-content: center;
+}
+.copyright__text {
+  font-size: 0.9rem;
+  padding: 10px;
+}
