--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,48 @@
-.header__img {
-  width: 400px;
+.header {
+  background-image: url(./src/assets/banner.jpg);
+  border-radius: 24px;
+  max-width: 1200px;
+  height: (100vh - 100px);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+  margin-inline: 40px;
+}
+.left {
+  width: 600px;
   height: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 48px;
+}
+.header__text {
+  font-size: 3.8rem;
+}
+.header__subtext {
+  width: 500px;
+  font-size: 0.9rem;
+  font-style: italic;
+  color: rgba(0, 0, 0, 0.525);
+  margin-top: 24px;
+}
+.header__btn {
+  background-image: url("/src/assets/banner3.jpg");
+  margin-top: 24px;
+  padding: 20px 60px;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 16px;
+  color: #fff;
+}
+.right {
+  padding: 48px;
+  width: 600px;
+}
+.header__img {
+  width: 500px;
+  height: 600px;
+  border-radius: 24px;
+  object-fit: cover;
 }
