--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,8 +1,46 @@
-.logo__img {
-  width: 20px;
-  height: 20px;
-}
-.logo {
+.container {
+  width: 100vw;
   display: flex;
   align-items: center;
+  justify-content: center;
+  margin-block: 32px;
+}
+.nav {
+  width: 1200px;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-inline: 40px;
+  border: 1px solid black;
+  border-radius: 24px;
+}
+
+.logo__img {
+  width: 30px;
+  height: 30px;
+  border-radius: 24px;
+}
+.logo {
+  padding: 10px;
+  font-size: 2rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+}
+.nav__links {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav__link {
+  list-style: none;
+  text-decoration: none;
+  margin-left: 20px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  padding: 10px;
+  color: #000;
 }
