--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -22,7 +22,7 @@
 .about__right {
   background-color: rgb(127, 163, 255);
   max-width: 534px;
-  margin-left: 16px;
+  margin-left: 32px;
   height: 400px;
   padding: 48px;
   border-radius: 24px;
@@ -35,6 +35,48 @@
 .about__img--image {
   width: 534px;
   height: 400px;
-  margin-right: 16px;
   border-radius: 24px;
+}
+
+@media only screen and (max-width: 480px) {
+  .container {
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .about {
+    width: 80vw;
+    height: fit fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 24px;
+  }
+
+  .content {
+    width: 312px;
+
+    margin-top: 24px;
+  }
+  .about > .heading {
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 600;
+    padding: 14px;
+  }
+
+  .about__right {
+    padding: 24px;
+    width: 312px;
+    height: fit-content;
+    margin: 32px auto 0px;
+  }
+  .about__img--image {
+    width: 312px;
+    height: 480px;
+    border-radius: 24px;
+    object-fit: cover;
+    margin: 24px auto 0px;
+  }
 }
