--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -31,8 +31,42 @@ form {
 
 .submit__btn {
   width: 300px;
+  background-color: #fff;
+  font-weight: 600;
+  color: rgb(67, 67, 67);
 }
 .contact__heading {
   font-size: 3rem;
-  padding: 26px;
+  padding: 24px;
+}
+
+@media only screen and (max-width: 480px) {
+  .container {
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .contact {
+    width: 80vw;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 24px;
+  }
+  .email,
+  .textarea {
+    width: 240px;
+    height: 60px;
+    font-size: 1.2rem;
+    padding: 24px;
+    border: none;
+    border-radius: 16px;
+    font-weight: 500;
+    margin: 20px;
+  }
+  .submit__btn {
+    width: 160px;
+  }
 }
