--- a/src/components/Discord/Discord.css
+++ b/src/components/Discord/Discord.css
@@ -38,3 +38,48 @@
   margin-left: 16px;
   border-radius: 24px;
 }
+
+@media only screen and (max-width: 480px) {
+  .container {
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .discord {
+    width: 80vw;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 24px;
+  }
+
+  .content {
+    width: 312px;
+    margin-top: 0px;
+  }
+  .discord > .heading {
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 600;
+    padding: 14px;
+  }
+
+  .discord__right {
+    padding: 24px;
+    width: 312px;
+    height: fit-content;
+    margin: 32px auto;
+  }
+  .discord__right--image {
+    border: 0.5px solid rgb(74, 128, 255);
+    width: 312px;
+    height: 240px;
+    border-radius: 24px;
+    object-fit: cover;
+    margin: 0 auto;
+    object-fit: fill;
+    padding: 10px;
+  }
+}
