--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: center;
   margin-inline: 40px;
-  border: 1px solid black;
+  border: 0.5px solid rgba(0, 0, 0, 0.201);
   border-radius: 24px;
 }
 .footer__img {
@@ -36,4 +36,34 @@
 .copyright__text {
   font-size: 0.9rem;
   padding: 10px;
+}
+
+@media only screen and (max-width: 480px) {
+  .container {
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer {
+    width: 80vw;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 24px;
+  }
+  .footer__links > a {
+    text-decoration: none;
+    padding: 10px;
+    color: #000;
+    font-weight: 500;
+    margin-left: 8px;
+    font-size: 0.8rem;
+    justify-content: center;
+  }
+  .copyright__text {
+    font-size: 0.5rem;
+    padding: 10px;
+  }
 }
