--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -46,3 +46,50 @@
   border-radius: 24px;
   object-fit: cover;
 }
+
+@media only screen and (max-width: 480px) {
+  .container {
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .header {
+    width: 80vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .left {
+    width: 312px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 24px;
+  }
+  .header__text {
+    text-align: center;
+    font-size: 2.6rem;
+    font-weight: 800;
+  }
+  .header__subtext {
+    width: 240px;
+    text-align: center;
+    font-size: 0.7rem;
+    font-weight: 400;
+    padding: 20px;
+    line-height: 1.2rem;
+    padding-top: 0px;
+  }
+  .right {
+    padding: 24px;
+    width: 312px;
+  }
+  .header__img {
+    width: 260px;
+    height: 480px;
+    border-radius: 24px;
+    object-fit: cover;
+  }
+}
