--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -38,7 +38,49 @@
   border-radius: 24px;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
+  .container {
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .about {
+    width: 80vw;
+    height: fit fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 24px;
+  }
+
+  .about > .content {
+    width: 480px;
+    margin-top: 24px;
+  }
+  .about > .heading {
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 600;
+    padding: 14px;
+  }
+
+  .about__right {
+    padding: 24px;
+    width: 440px;
+    height: fit-content;
+    margin: 32px auto 0px;
+  }
+  .about__img--image {
+    width: 440px;
+    height: 480px;
+    border-radius: 24px;
+    object-fit: cover;
+    margin-left: 18px;
+  }
+}
+
+@media only screen and (max-width: 390px) {
   .container {
     height: fit-content;
     display: flex;
@@ -56,7 +98,6 @@
 
   .content {
     width: 312px;
-
     margin-top: 24px;
   }
   .about > .heading {
