--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,7 +11,8 @@
   align-items: center;
   justify-content: space-between;
   margin-inline: 40px;
-  border: 1px solid black;
+  border: 0.5px solid rgba(0, 0, 0, 0.201);
+
   border-radius: 24px;
 }
 .logo__img {
@@ -42,7 +43,7 @@
   padding: 10px;
   color: #000;
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
   .container {
     height: fit-content;
     display: flex;
